--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "node-appwrite": "^14.1.0",
     "nuqs": "^2.1.1",
     "react": "18.3.1",
+    "react-big-calendar": "^1.17.1",
     "react-day-picker": "8.10.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.1",
@@ -52,6 +53,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
